# GoldenGMSA

./: GoldenGMSA.py  README.md  setup.cfg  setup.py
GoldenGMSA/: __init__.py  __main__.py
GoldenGMSA/core/: GoldenGMSA.py  Logger.py  __init__.py  gMSAInfo.py  kdsinfo.py
GoldenGMSA/network/: LDAP.py  __init__.py
GoldenGMSA/structures/: Target.py  __init__.py
GoldenGMSA/structures/ADObject/: ADGMSA.py  ADKDSKey.py  __init__.py
docs/: examples.md
